tests/parse-fail/bad_decl.fl.0.exp
Error: bad_decl.fl(2,5): Expected closing brace, but found: if
pub mod foo {
    if
    ^  
}

